# scale_new

./: .gitignore  300028_master_job.err  archive.csv  chin_data.csv  chin_hoffman_compute_gap_plot.py  chin_rebuttal_hoffman_sweep.py  chin_rebuttal_new.py  chin_rebuttal_with_table.py  chin_rebuttal_with_table_formatted.csv  chin_rebuttal_with_table_summary.csv  figure1_lm1b.py  figure1_owt copy.py  figure1_owt.py  file_comparison.md  fit_nqs_log.txt  h_samples_after_fitted_line.csv  h_samples_with_actual_N.csv  hf_utils_build_model.py  hf_utils_build_model_Jan_bu.py  hf_utils_train_mode_general_old.py  hf_utils_train_model.py  hf_utils_train_model_Jan22.py  hf_utils_train_model_diff.txt  hf_utils_train_model_multi_GPU.py  hf_utils_train_model_old.py  hf_utils_train_model_owt_BS_sch.py  hf_utils_train_model_owt_BS_sch_with_cosine.py  hf_utils_train_model_test.py  hf_utils_train_model_track_weightnorm.py  iso_loss_5_genome_adamw_cosine.py  last_checkpoint_path.txt  lookup_entry.csv  loss_vs_D_combined_genome_adamw_cosine_data.csv  master.py  performance_by_compute_gap copy.csv  performance_by_compute_gap.py  performance_by_compute_gap_mse.csv  plot_BS_schedule.py  plot_NB_scatter.py  plot_NB_scatter_only.py  (+22 more)
package/: .gitignore  README.md  analyze_error_bounds.py  analyze_error_bounds_perturb.py  compute_loss_variance.py  dataset.csv  demo_fit_and_predict.py  demo_log.txt  error_bound.py  error_bound_perturb.py  fitted_nqs.json  pyproject.toml  track_weight_norm.py  visualize_loss_distribution.py
package/nqs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+349 files in other folders)
